# pico_template

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt  dummy_lib.c  dummy_lib.h
src/: CMakeLists.txt  main.c
test/: CMakeLists.txt
test/test_dummy_lib/: CMakeLists.txt  test_dummy_app.c
unity/: CMakeLists.txt
